--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,39 @@
 	"context": "..",
 
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-	"dockerFile": "../Dockerfile.dev"
+	"dockerFile": "../Dockerfile.dev",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"streetsidesoftware.code-spell-checker",
+				"kisstkondoros.vscode-codemetrics",
+				"adpyke.codesnap",
+				"naumovs.color-highlight",
+				"dbaeumer.vscode-eslint",
+				"mhutchie.git-graph",
+				"GitHub.vscode-pull-request-github",
+				"codezombiech.gitignore",
+				"eamodio.gitlens",
+				"fabiospampinato.vscode-highlight",
+				"wix.vscode-import-cost",
+				"VisualStudioExptTeam.vscodeintellicode",
+				"VisualStudioExptTeam.intellicode-api-usage-examples",
+				"ms-vscode.live-server",
+				"yzhang.markdown-all-in-one",
+				"shd101wyy.markdown-preview-enhanced",
+				"christian-kohler.npm-intellisense",
+				"christian-kohler.path-intellisense",
+				"esbenp.prettier-vscode",
+				"mutantdino.resourcemonitor",
+				"syler.sass-indented",
+				"gencer.html-slim-scss-css-class-completion",
+				"mrmlnc.vscode-scss",
+				"bradlc.vscode-tailwindcss",
+				"rangav.vscode-thunder-client",
+				"WakaTime.vscode-wakatime"
+			]
+		}
+	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
