--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   },
   "private": true,
   "workspaces": {
-    "packages": ["tutorials/*"]
+    "packages": [
+      "tutorials/*"
+    ]
   },
   "packageManager": "yarn@1.23.0",
   "devDependencies": {
     "eslint": "^8.21.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "endOfLine": "lf",
+    "printWidth": 100,
+    "useTabs": false,
+    "tabWidth": 2
   }
 }
